test/spec_vectors/simd_i8x16_arith2/fail/module_12.wat
(module (func (result v128) (i8x16.abs (f32.const 0.0))))